# Pytask-CLI

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: functions.py  models.py
pytask/: main.py
